syntax = "proto3";
 
package protomsgs;
import "common.proto";

//// task protocol

message InspectContMsgData {
    MessageData messageData = 1;
}

// a protocol define a set of reuqest and responses
message InspectContRequest {
    InspectContMsgData InspectContMsgData = 1;
    string containerID = 2; // The image that needs to be executed
}

message InspectContResponse {
    InspectContMsgData InspectContMsgData = 1;
    string inspection = 2;  // Result of execution   
}
